--- a/RPS_Game/app/src/main/res/values/strings.xml
+++ b/RPS_Game/app/src/main/res/values/strings.xml
@@ -2,4 +2,30 @@
     <string name="app_name">Taş Kağıt Makas Oyunu</string>
     <string name="kamera_cevir">Kamerayı Çevir</string>
     <string name="hamleyi_belirle">Hamleyi Belirle</string>
+    <string name="app_name2">Login Register</string>
+    <string name="text_accounts">All Accounts</string>
+    <string name="hint_name">Name</string>
+    <string name="hint_email">Email</string>
+    <string name="hint_move">Move</string>
+    <string name="hint_rmove">Random Move</string>
+    <string name="hint_result">Result</string>
+    <string name="hint_password">Password</string>
+    <string name="hint_confirm_password">Confirm Password</string>
+    <string name="text_login">Login</string>
+    <string name="text_register">Register</string>
+    <string name="error_message_name">Enter Valid Name</string>
+    <string name="error_message_email">Enter Valid Email</string>
+    <string name="error_message_age">Enter Age</string>
+    <string name="error_message_password">Enter Password</string>
+    <string name="success_message">Registration Successful</string>
+    <string name="text_not_member">No account yet? Create one</string>
+    <string name="text_already_member">Already a member? Login</string>
+    <string name="error_email_exists">Email Already Exists</string>
+    <string name="error_name_exists">Name Already Exists</string>
+    <string name="error_password_match">Password Does Not Matches</string>
+    <string name="error_valid_email_password">Wrong Name or Password</string>
+    <string name="action_settings">Settings</string>
+    <string name="text_hello">Hello</string>
+    <string name="text_title">Users Game History</string>
+    <string name="title_activity_record">RecordActivity</string>
 </resources>
